# Parametric-Adaptation-over-RAG

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  config.py  main.py  pyproject.toml
assets/figures/: generate_figures.py
data/: AGENTS.md
data/150/: dev-gold-150-v1.assistant_scores.json
data/150_qa_65_docs/: assembly_manifest.json
data/corpus4-100/: GOLDSET_SPEC.md  dev-gold-corpus4-100-v1.assistant_scores.json  dev-gold-corpus4-100-v1.benchmark.json  question_pool.questions.json  question_pool_manifest.json  selected.questions.json  shard_manifest.json
data/corpus4_2-100/: GOLDSET_SPEC.md  dev-gold-corpus4_2-100-v1.assistant_scores.json  dev-gold-corpus4_2-100-v1.benchmark.json  part_01.dossier.md  part_03.dossier.md  part_05.dossier.md  question_manifest.json  (+4 more)
docs/: ARCHITECTURE.md  ARCHITECTURE_OLD.md  Crisis_Review.md  Data-Audit-Report.md  Literature.md  Supervisor Review.md  about_challenge_EVALUATION.md  git-cleanup.md  Практическая документация по SakanaAI Doc-to-LoRA.md
eda/: AGENTS.md
experiments/: AGENTS.md  README.md
logs/: CLAUDE.md
memory_bank/: ARCHITECTURE.md  BACKLOG-routing-research.md  SPEC-data.md  SPEC-evaluation.md  SPEC-systems.md  STATE.md  TASKS.md
notebooks/: generate_d2l_adapters.ipynb
src/: README.md  __init__.py
term-paper/: Science_Advisor_1_Review.md  Science_Advisor_2_Review.md  Term_Paper.md  Term_Paper_1.md  Writing_Blueprint.md
term-paper_2/: Term-Paper_Blueprint.md  Term-Paper_Draft.md  W1_Sections_1_2.md  W2_Sections_3_4.md  W5_Sections_6_7_Appendix.md  main.typ  refs.bib
term-paper_3/: Term-Paper-3.md
(+380 files in other folders)
