[project]
name = "term-paper"
version = "0.1.0"
description = "Knowledge Injection for Document-Grounded QA on Consumer Hardware"
requires-python = ">=3.12"
dependencies = [
    # Core data
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pymupdf>=1.27.2.2",

    # DL framework (pinned for Doc-to-LoRA compat, from cu124 index)
    "torch==2.6.0",

    # Transformers stack (pinned for Doc-to-LoRA)
    "transformers==4.51.3",
    "tokenizers>=0.21,<0.22",
    "accelerate==1.6.0",
    "peft>=0.15",
    "bitsandbytes>=0.46.1",

    # Retrieval & embedding (S1, S4 routing, S5)
    "sentence-transformers>=3.0",
    "qdrant-client>=1.9",

    # Doc-to-LoRA inference internals
    "einops",
    "jaxtyping",
    "datasets>=3.6",

    # Evaluation (gpt-5.4-mini judge)
    "openai>=1.0",
    "pydantic>=2.0",
    "huggingface-hub>=0.23",

    # Analysis & clustering
    "scikit-learn>=1.5",
    "matplotlib>=3.9",

    # Utilities
    "python-dotenv>=1.0",
    "outlines>=1.2",
    "sentencepiece",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "config.py"]

[[tool.uv.index]]
name = "local-cuda"
url = "file:///home/xeliaray/.cache/cuda-wheels/simple"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
